--- a/app/src/main/assets/about.properties
+++ b/app/src/main/assets/about.properties
@@ -1,6 +1,6 @@
 about.version=1.0.0-rc.2
 about.build=39199
-about.date=Mon Dec 16 15:46:00 2019
-about.commit=4f3b0cf
-about.commitFull=4f3b0cfe628a24312dcefccfca45cfee01689fc0
+about.date=mar. déc. 17 08:43:57 2019
+about.commit=
+about.commitFull=
 about.github=https://github.com/glpi-project/android-inventory-agent
