ci(release): update version on android manifest

--- a/app/src/main/assets/about.properties
+++ b/app/src/main/assets/about.properties
@@ -1,6 +1,6 @@
 about.version=1.0.0-rc.2
-about.build=39199
-about.date=mar. déc. 17 08:43:57 2019
-about.commit=
-about.commitFull=
+about.build=39201
+about.date=Tue Dec 17 07:59:52 2019
+about.commit=5ff2742
+about.commitFull=5ff27426a012282c847ede9a8311c4eea86a1899
 about.github=https://github.com/glpi-project/android-inventory-agent
