fix(readme): update informations
Signed-off-by: Teclib <skita@teclib.com>

--- a/app/src/main/assets/about.properties
+++ b/app/src/main/assets/about.properties
@@ -1,6 +1,6 @@
 about.version=1.0.0-rc.2
 about.build=39203
-about.date=Tue Dec 17 08:29:05 2019
-about.commit=4983f37
-about.commitFull=4983f37db4c976b54375fa7871aaaf1213f44267
+about.date=mar. déc. 17 10:32:18 2019
+about.commit=
+about.commitFull=
 about.github=https://github.com/glpi-project/android-inventory-agent
