ci(release): update version on android manifest

--- a/app/src/main/assets/about.properties
+++ b/app/src/main/assets/about.properties
@@ -1,6 +1,6 @@
 about.version=1.0.0-rc.2
-about.build=39203
-about.date=mar. déc. 17 10:32:18 2019
-about.commit=
-about.commitFull=
+about.build=39205
+about.date=Tue Dec 17 11:01:07 2019
+about.commit=d74d1bc
+about.commitFull=d74d1bca20ad66b7f9f58788aaa29047c52a0720
 about.github=https://github.com/glpi-project/android-inventory-agent
