ci(release): update version on android manifest

--- a/app/src/main/assets/about.properties
+++ b/app/src/main/assets/about.properties
@@ -1,6 +1,6 @@
 about.version=1.0.0-rc.2
-about.build=39205
-about.date=mar. déc. 17 13:04:50 2019
-about.commit=
-about.commitFull=
+about.build=39207
+about.date=Tue Dec 17 12:25:52 2019
+about.commit=ba53042
+about.commitFull=ba5304226b17706661ca923d8a2a51e61d147be8
 about.github=https://github.com/glpi-project/android-inventory-agent
