--- a/app/src/main/assets/about.properties
+++ b/app/src/main/assets/about.properties
@@ -1,6 +1,6 @@
 about.version=1.0.0-rc.2
 about.build=39209
-about.date=Wed Dec 18 14:57:31 2019
-about.commit=1b8917f
-about.commitFull=1b8917f24dd394bbb88b0c605cf021b2b905fd94
+about.date=jeu. déc. 19 10:58:22 2019
+about.commit=
+about.commitFull=
 about.github=https://github.com/glpi-project/android-inventory-agent
