ci(release): update version on android manifest

--- a/app/src/main/assets/about.properties
+++ b/app/src/main/assets/about.properties
@@ -1,6 +1,6 @@
 about.version=1.0.0-rc.2
-about.build=39209
-about.date=jeu. déc. 19 10:58:22 2019
-about.commit=
-about.commitFull=
+about.build=39211
+about.date=Thu Dec 19 10:25:33 2019
+about.commit=3b57a6d
+about.commitFull=3b57a6d2f3903629a1588ab135b235764de88099
 about.github=https://github.com/glpi-project/android-inventory-agent
