--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,9 @@
     <uses-permission android:name="android.permission.DISABLE_KEYGUARD" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
 
+    <!-- Allows for QR COde scanner -->
+    <uses-permission android:name="android.permission.VIBRATE" />
+
     <!-- Allows for storing and retrieving screenshots -->
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
@@ -59,6 +62,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".ui.ScanActivity"
+            android:launchMode="singleInstance"
+            android:screenOrientation="landscape"></activity>
+
         <activity
             android:name="org.glpi.inventory.agent.ui.ActivityMain"
             android:configChanges="orientation|screenSize"
