fix(ui): fix crash on orientation change

--- a/app/src/main/assets/about.properties
+++ b/app/src/main/assets/about.properties
@@ -1,6 +1,6 @@
 about.version=1.0.0-rc.2
 about.build=39213
-about.date=Fri Dec 20 07:44:38 2019
-about.commit=a157e10
-about.commitFull=a157e10028d716d2816485d90b4f863f20947e85
+about.date=ven. déc. 20 09:00:27 2019
+about.commit=
+about.commitFull=
 about.github=https://github.com/glpi-project/android-inventory-agent
