--- a/app/src/main/assets/about.properties
+++ b/app/src/main/assets/about.properties
@@ -1,6 +1,6 @@
 about.version=1.0.0-rc.2
-about.build=39213
-about.date=ven. déc. 20 09:00:27 2019
-about.commit=
-about.commitFull=
+about.build=39215
+about.date=Fri Dec 20 08:35:53 2019
+about.commit=dd451ea
+about.commitFull=dd451ea2043b0e090a375d48f5aea87c373660ae
 about.github=https://github.com/glpi-project/android-inventory-agent
