ci(release): update version on android manifest

--- a/app/src/main/assets/about.properties
+++ b/app/src/main/assets/about.properties
@@ -1,6 +1,6 @@
 about.version=1.0.0-rc.2
-about.build=39215
-about.date=ven. déc. 20 09:46:33 2019
-about.commit=
-about.commitFull=
+about.build=39217
+about.date=Fri Dec 20 09:29:37 2019
+about.commit=4e7bcc3
+about.commitFull=4e7bcc355b0b2275de5b360056c8b2fcbc827416
 about.github=https://github.com/glpi-project/android-inventory-agent
