ci(release): update version on android manifest

--- a/app/src/main/assets/about.properties
+++ b/app/src/main/assets/about.properties
@@ -1,6 +1,6 @@
 about.version=1.0.0-rc.2
-about.build=39217
-about.date=ven. déc. 20 11:52:31 2019
-about.commit=
-about.commitFull=
+about.build=39219
+about.date=Fri Dec 20 11:44:16 2019
+about.commit=36f6162
+about.commitFull=36f61626d62095cf2abc1efb8e32d364b4041f59
 about.github=https://github.com/glpi-project/android-inventory-agent
