--- a/app/src/main/assets/about.properties
+++ b/app/src/main/assets/about.properties
@@ -1,6 +1,6 @@
 about.version=1.0.0-rc.2
 about.build=39221
-about.date=Fri Dec 20 12:42:56 2019
-about.commit=e8b8ec5
-about.commitFull=e8b8ec5eeb82e9665ff1c0e3e0deec08e850238c
+about.date=ven. déc. 27 07:05:32 2019
+about.commit=
+about.commitFull=
 about.github=https://github.com/glpi-project/android-inventory-agent
