ci(release): update version on android manifest

--- a/app/src/main/assets/about.properties
+++ b/app/src/main/assets/about.properties
@@ -1,6 +1,6 @@
 about.version=1.0.0-rc.2
-about.build=39221
-about.date=ven. déc. 27 07:05:32 2019
-about.commit=
-about.commitFull=
+about.build=39223
+about.date=Fri Dec 27 06:22:02 2019
+about.commit=7b17b32
+about.commitFull=7b17b3200b90b5c8233b5ca61906b6925749122d
 about.github=https://github.com/glpi-project/android-inventory-agent
