refactor(ui): change pics and fix float input behavior
Signed-off-by: Teclib <skita@teclib.com>

--- a/app/src/main/assets/about.properties
+++ b/app/src/main/assets/about.properties
@@ -1,6 +1,6 @@
 about.version=1.0.0-rc.2
 about.build=39225
-about.date=Fri Dec 27 07:11:17 2019
-about.commit=b746352
-about.commitFull=b746352a92c99a17b45ded942ef7ebcd901a3d19
+about.date=ven. déc. 27 14:30:10 2019
+about.commit=
+about.commitFull=
 about.github=https://github.com/glpi-project/android-inventory-agent
