--- a/app/src/main/assets/about.properties
+++ b/app/src/main/assets/about.properties
@@ -1,6 +1,6 @@
 about.version=1.0.0-rc.2
-about.build=39225
-about.date=ven. déc. 27 14:30:10 2019
-about.commit=
-about.commitFull=
+about.build=39227
+about.date=Fri Dec 27 13:57:09 2019
+about.commit=4a6dcc0
+about.commitFull=4a6dcc0d5c1f419e0d0b4ca3b4043e8a8bf8d0e8
 about.github=https://github.com/glpi-project/android-inventory-agent
