ci(release): update version on android manifest

--- a/app/src/main/assets/about.properties
+++ b/app/src/main/assets/about.properties
@@ -1,6 +1,6 @@
 about.version=1.0.0-rc.2
-about.build=39227
-about.date=lun. déc. 30 09:08:28 2019
-about.commit=
-about.commitFull=
+about.build=39229
+about.date=Mon Dec 30 09:58:28 2019
+about.commit=1aaefc0
+about.commitFull=1aaefc01e1b78536c56cca24fc805cd908120329
 about.github=https://github.com/glpi-project/android-inventory-agent
