ci(release): update version on android manifest

--- a/app/src/main/assets/about.properties
+++ b/app/src/main/assets/about.properties
@@ -1,6 +1,6 @@
 about.version=1.0.0-rc.2
-about.build=39229
-about.date=lun. janv. 06 08:50:19 2020
-about.commit=
-about.commitFull=
+about.build=39231
+about.date=Mon Jan 06 08:27:40 2020
+about.commit=0b1deb0
+about.commitFull=0b1deb0e818cf96ff43f484397950b2182094b6d
 about.github=https://github.com/glpi-project/android-inventory-agent
