ci(release): update version on android manifest

--- a/app/src/main/assets/about.properties
+++ b/app/src/main/assets/about.properties
@@ -1,6 +1,6 @@
 about.version=1.0.0-rc.2
-about.build=39231
-about.date=lun. janv. 06 09:59:33 2020
-about.commit=
-about.commitFull=
+about.build=39233
+about.date=Mon Jan 06 09:35:26 2020
+about.commit=0280595
+about.commitFull=02805957e08897a490ebd50f56be6859fc496f52
 about.github=https://github.com/glpi-project/android-inventory-agent
