ci(release): update version on android manifest

--- a/app/src/main/assets/about.properties
+++ b/app/src/main/assets/about.properties
@@ -1,6 +1,6 @@
 about.version=1.0.0-rc.2
-about.build=39233
-about.date=lun. janv. 06 11:36:10 2020
-about.commit=
-about.commitFull=
+about.build=39235
+about.date=Mon Jan 06 11:36:01 2020
+about.commit=109cc20
+about.commitFull=109cc20ee183192d4b2afe7de0cfcadfb347998c
 about.github=https://github.com/glpi-project/android-inventory-agent
