fix(share): prevent error (transactiontoolarge) on share inventory

--- a/app/src/main/assets/about.properties
+++ b/app/src/main/assets/about.properties
@@ -1,6 +1,6 @@
 about.version=1.0.0-rc.2
 about.build=39237
-about.date=Mon Jan 06 13:19:58 2020
-about.commit=8eb74a6
-about.commitFull=8eb74a6077721c7efee245eaa974ba5f1671190b
+about.date=lun. janv. 06 14:24:18 2020
+about.commit=
+about.commitFull=
 about.github=https://github.com/glpi-project/android-inventory-agent
