--- a/app/src/main/assets/about.properties
+++ b/app/src/main/assets/about.properties
@@ -1,6 +1,6 @@
 about.version=1.0.0-rc.2
 about.build=39239
-about.date=Mon Jan 06 13:48:18 2020
-about.commit=0876850
-about.commitFull=08768507e94e1e9f447c620b613d100e8f9e7685
+about.date=lun. janv. 06 14:51:26 2020
+about.commit=
+about.commitFull=
 about.github=https://github.com/glpi-project/android-inventory-agent
