ci(release): update version on android manifest

--- a/app/src/main/assets/about.properties
+++ b/app/src/main/assets/about.properties
@@ -1,6 +1,6 @@
 about.version=1.0.0-rc.2
-about.build=39239
-about.date=lun. janv. 06 14:51:26 2020
-about.commit=
-about.commitFull=
+about.build=39241
+about.date=Mon Jan 06 14:19:41 2020
+about.commit=95f7696
+about.commitFull=95f76961dfdfd35dcc53b5a3ce349e4f0d19e80b
 about.github=https://github.com/glpi-project/android-inventory-agent
