fix(build): fix release
Signed-off-by: Teclib <skita@teclib.com>

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@teclib/android-inventory-agent",
-  "version": "1.0.0-rc.2",
+  "version": "1.0.0",
   "description": "GLPI Android Inventory Agent",
   "main": "index.js",
   "scripts": {
