--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -160,7 +160,7 @@ jobs:
           command: source ci/scripts/setup_environment.sh
       - run:
           name: Update version code
-          command: ./gradlew updateVersionCode -P vVersion=$CIRCLE_BUILD_NUM
+          command: ./gradlew updateVersionCode
       - run:
           name: Update version name
           command: ./gradlew updateVersionName -P vName=$GIT_TAG
