ci(release): update version on android manifest

--- a/app/src/main/assets/about.properties
+++ b/app/src/main/assets/about.properties
@@ -1,6 +1,6 @@
 about.version=1.0.0
-about.build=39263
-about.date=ven. janv. 10 15:56:31 2020
-about.commit=
-about.commitFull=
+about.build=39265
+about.date=Fri Jan 10 15:16:23 2020
+about.commit=4859499
+about.commitFull=4859499820f414642ea7b0811048c582361b8cfd
 about.github=https://github.com/glpi-project/android-inventory-agent
