--- a/app/src/main/assets/about.properties
+++ b/app/src/main/assets/about.properties
@@ -1,6 +1,6 @@
 about.version=1.0.0
 about.build=39283
-about.date=Wed Sep 23 14:18:20 2020
-about.commit=ca06344
-about.commitFull=ca063440a3b5d6dc1c9da310b016fab72434dc55
+about.date=mar. oct. 13 07:51:40 2020
+about.commit=
+about.commitFull=
 about.github=https://github.com/glpi-project/android-inventory-agent
