Revert "ci(release): update version on android manifest"
This reverts commit 3c2dfd073453f5704433b6633eb59316ab5f61aa.

--- a/app/src/main/assets/about.properties
+++ b/app/src/main/assets/about.properties
@@ -1,6 +1,6 @@
 about.version=1.0.0
-about.build=39285
-about.date=Wed Mar 17 10:32:40 2021
-about.commit=7d5df37
-about.commitFull=7d5df3769bd8df2affb370736c5b6d7ed2ab278d
+about.build=39283
+about.date=mar. oct. 13 07:51:40 2020
+about.commit=
+about.commitFull=
 about.github=https://github.com/glpi-project/android-inventory-agent
