Revert "ci(release): update version on android manifest"
This reverts commit 62f17f1263ce0214f51967ee610f0d139ed2ae95.

--- a/app/src/main/assets/about.properties
+++ b/app/src/main/assets/about.properties
@@ -1,6 +1,6 @@
 about.version=1.0.0
-about.build=39267
-about.date=Fri Jan 17 07:42:13 2020
-about.commit=dd905c3
-about.commitFull=dd905c31fa38214d3cd7a69c92869afff64ea9a3
+about.build=39265
+about.date=lun. janv. 13 16:18:57 2020
+about.commit=
+about.commitFull=
 about.github=https://github.com/glpi-project/android-inventory-agent
