Revert "fix(changelog): clean changelog"
This reverts commit 57dd64f295c730707f35d3fefcc580c80e436fd4.

--- a/app/src/main/assets/about.properties
+++ b/app/src/main/assets/about.properties
@@ -1,6 +1,6 @@
 about.version=1.0.0
-about.build=39263
-about.date=ven. janv. 10 15:56:31 2020
+about.build=39261
+about.date=mar. janv. 07 12:16:53 2020
 about.commit=
 about.commitFull=
 about.github=https://github.com/glpi-project/android-inventory-agent
