feat(core): native inventory compatibility
Signed-off-by: Teclib <skita@teclib.com>

--- a/app/src/main/assets/about.properties
+++ b/app/src/main/assets/about.properties
@@ -1,6 +1,6 @@
 about.version=1.1.0
 about.build=39329
-about.date=Thu Sep 30 09:16:01 2021
-about.commit=6c9db58
-about.commitFull=6c9db58604c4c69710b6903b1eb727edfb88b18b
+about.date=mer. avril 06 13:04:50 2022
+about.commit=
+about.commitFull=
 about.github=https://github.com/glpi-project/android-inventory-agent
