--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,6 +72,7 @@ dependencies {
     implementation 'com.orhanobut:logger:2.2.0'
     implementation 'androidx.multidex:multidex:2.0.1'
     implementation 'androidx.preference:preference:1.1.1'
+    implementation 'org.dom4j:dom4j:2.1.3'
 
 
     // Add the Firebase Crashlytics SDK.
