--- a/app/src/main/assets/about.properties
+++ b/app/src/main/assets/about.properties
@@ -1,6 +1,6 @@
 about.version=1.1.0
-about.build=39329
-about.date=mer. avril 06 13:04:50 2022
-about.commit=
-about.commitFull=
+about.build=39331
+about.date=Thu Apr 07 07:28:28 2022
+about.commit=79c2631
+about.commitFull=79c2631b98702757ed6beaaa921b315a025e92c8
 about.github=https://github.com/glpi-project/android-inventory-agent
