feat(core): bump Compil / Target SdkVersion to 30
Signed-off-by: Teclib <skita@teclib.com>

--- a/app/src/main/assets/about.properties
+++ b/app/src/main/assets/about.properties
@@ -1,6 +1,6 @@
 about.version=1.1.0
 about.build=39331
-about.date=Thu Apr 07 07:28:28 2022
-about.commit=79c2631
-about.commitFull=79c2631b98702757ed6beaaa921b315a025e92c8
+about.date=jeu. avril 07 09:55:14 2022
+about.commit=
+about.commitFull=
 about.github=https://github.com/glpi-project/android-inventory-agent
