ci(release): update version on android manifest

--- a/app/src/main/assets/about.properties
+++ b/app/src/main/assets/about.properties
@@ -1,6 +1,6 @@
 about.version=1.1.0
-about.build=39331
-about.date=jeu. avril 07 09:55:14 2022
-about.commit=
-about.commitFull=
+about.build=39333
+about.date=Thu Apr 07 08:31:11 2022
+about.commit=7d49f0e
+about.commitFull=7d49f0ebc440286085c5cec52517bab888add2bb
 about.github=https://github.com/glpi-project/android-inventory-agent
