feat(core): use innentory library as external lib instead of dependencies

--- a/app/src/main/assets/about.properties
+++ b/app/src/main/assets/about.properties
@@ -1,6 +1,6 @@
 about.version=1.1.0
 about.build=39337
-about.date=Thu Apr 07 10:09:07 2022
-about.commit=bd4fd96
-about.commitFull=bd4fd96fc40bdcc7412d5908e70c8f81e261a40c
+about.date=ven. avril 08 14:02:43 2022
+about.commit=
+about.commitFull=
 about.github=https://github.com/glpi-project/android-inventory-agent
