--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,7 +44,7 @@ android {
 }
 
 dependencies {
-
+    implementation fileTree(include: ['*.jar', '*.aar'], dir: 'libs')
     implementation 'info.hoang8f:fbutton:1.0.5'
 
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
@@ -68,7 +68,6 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
-    implementation 'org.flyve:inventory:1.4.4@aar'
     implementation 'com.orhanobut:logger:2.2.0'
     implementation 'androidx.multidex:multidex:2.0.1'
     implementation 'androidx.preference:preference:1.1.1'
@@ -86,7 +85,6 @@ dependencies {
 
     testImplementation 'junit:junit:4.12'
 }
-
 
 import groovy.json.JsonSlurper
 
