--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,7 +44,8 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme"
         android:largeHeap="true"
-        android:vmSafeMode="true">
+        android:vmSafeMode="true"
+        android:requestLegacyExternalStorage="true">
 
         <uses-library android:name="org.apache.http.legacy" android:required="false" />
 
@@ -70,6 +71,8 @@
         <activity
             android:name="org.glpi.inventory.agent.ui.ActivityMain"
             android:configChanges="orientation|screenSize"
+            android:requestLegacyExternalStorage="true"
+            android:exported="true"
             android:label="@string/app_name" />
         <activity
             android:name="org.glpi.inventory.agent.preference.InventoryParametersPreference"
