--- a/app/src/main/assets/about.properties
+++ b/app/src/main/assets/about.properties
@@ -1,6 +1,6 @@
 about.version=1.1.0
-about.build=39337
-about.date=ven. avril 08 14:02:43 2022
-about.commit=
-about.commitFull=
+about.build=39339
+about.date=Fri Apr 08 12:20:02 2022
+about.commit=6d5ace3
+about.commitFull=6d5ace3a82dc45f83e837a8a9c5635099fb73ff5
 about.github=https://github.com/glpi-project/android-inventory-agent
