feat(build): Migrate develop PullRequest CircleCI to GithubAction

--- a/app/src/main/assets/about.properties
+++ b/app/src/main/assets/about.properties
@@ -1,6 +1,6 @@
 about.version=1.2.0
-about.build=39349
-about.date=Thu Apr 21 10:43:44 2022
-about.commit=bac1c99
-about.commitFull=bac1c99763f2b204a1cfaf0a7b74296cff0fc5ab
+about.build=39351
+about.date=ven. août 25 11:27:12 2023
+about.commit=
+about.commitFull=
 about.github=https://github.com/glpi-project/android-inventory-agent
