--- a/.tx/config
+++ b/.tx/config
@@ -1,11 +1,12 @@
 [main]
-host = https://www.transifex.com
-minimum_perc = 80
-lang_map = pt_BR: pt-rBR, ru_RU: ru-rRU, fr_FR: fr-rFR, es_MX: es-rMX, es_ES: es-rES, en_GB: en-rGB, ko_KR: ko-rKR, ar_EG: ar-rEG, cs_CZ: cs-rCZ, he_IL: he-rIL, ar_SA: ar-rSA, ca_ES: ca-rES, zh_CN: zh-rCN, nl_NL: nl-rNL, fr: fr, gl_ES: gl-rES, de_DE: de-rDE, hi_IN: hi-rIN, hu_Hu: hu-rHU, it_IT: it-rIT, ja: ja, ja_JP: ja-rJP, pl_PL: pl-rPL, es: es, es_AR: es-rAR, th_TH: th-rTH, ur_PK: ur-rPK, eu_ES: eu-rES
+host     = https://www.transifex.com
+lang_map = es_ES: es-rES, ar_SA: ar-rSA, it_IT: it-rIT, eu_ES: eu-rES, fr_FR: fr-rFR, he_IL: he-rIL, pl_PL: pl-rPL, es_AR: es-rAR, th_TH: th-rTH, pt_BR: pt-rBR, fr: fr, gl_ES: gl-rES, es: es, zh_CN: zh-rCN, ja: ja, ja_JP: ja-rJP, nl_NL: nl-rNL, ko_KR: ko-rKR, cs_CZ: cs-rCZ, hi_IN: hi-rIN, es_MX: es-rMX, en_GB: en-rGB, ca_ES: ca-rES, de_DE: de-rDE, ru_RU: ru-rRU, hu_Hu: hu-rHU, ur_PK: ur-rPK, ar_EG: ar-rEG
 
-[android-inventory-agent.stringsxml-android]
-file_filter = app/src/main/res/values-<lang>/strings.xml
-source_file = app/src/main/res/values/strings.xml
-source_lang = en
-type = ANDROID
+[o:glpi:p:android-inventory-agent:r:stringsxml-android]
+file_filter            = app/src/main/res/values-<lang>/strings.xml
+source_file            = app/src/main/res/values/strings.xml
+source_lang            = en
+type                   = ANDROID
+replace_edited_strings = false
+keep_translations      = false
 
