--- a/app/src/main/assets/about.properties
+++ b/app/src/main/assets/about.properties
@@ -1,6 +1,6 @@
 about.version=1.2.0
-about.build=39351
-about.date=ven. août 25 11:27:12 2023
+about.build=1.0
+about.date=lun. août 28 10:40:12 2023
 about.commit=
 about.commitFull=
 about.github=https://github.com/glpi-project/android-inventory-agent
