--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,140 +1,96 @@
-<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    package="org.glpi.inventory.agent"
-    android:versionCode="39351"
-    android:versionName="">
+<?xml version="1.0" encoding="utf-8"?><manifest xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools" android:versionCode="39351" android:versionName="">
 
     <!-- Permissions -->
-    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.ACCESS_MOCK_LOCATION" />
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <uses-permission android:name="android.permission.ACCESS_LOCATION_EXTRA_COMMANDS" />
-    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.CAMERA" />
-    <uses-permission android:name="android.permission.BLUETOOTH" />
-    <uses-permission android:name="android.permission.GET_PACKAGE_SIZE" />
-    <uses-permission android:name="android.permission.CHANGE_WIFI_MULTICAST_STATE" />
-    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_MOCK_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_LOCATION_EXTRA_COMMANDS"/>
+    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-permission android:name="android.permission.BLUETOOTH"/>
+    <uses-permission android:name="android.permission.GET_PACKAGE_SIZE"/>
+    <uses-permission android:name="android.permission.CHANGE_WIFI_MULTICAST_STATE"/>
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE"/>
     <!-- Allows unlocking your device and activating its screen so UI tests can succeed -->
-    <uses-permission android:name="android.permission.DISABLE_KEYGUARD" />
-    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.DISABLE_KEYGUARD"/>
+    <uses-permission android:name="android.permission.WAKE_LOCK"/>
 
     <!-- Allows for QR COde scanner -->
-    <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.VIBRATE"/>
 
     <!-- Allows for storing and retrieving screenshots -->
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 
     <!-- Allows changing locales -->
-    <uses-permission android:name="android.permission.CHANGE_CONFIGURATION" />
+    <uses-permission android:name="android.permission.CHANGE_CONFIGURATION"/>
 
     <!-- Apps wanting to use foreground services, API 28 higher -->
-    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
 
-    <application
-        android:name="org.glpi.inventory.agent.ui.InventoryAgentApp"
-        android:icon="@mipmap/ic_launcher"
-        android:roundIcon="@drawable/ic_launcher_round"
-        android:label="@string/app_name"
-        android:theme="@style/AppTheme"
-        android:largeHeap="true"
-        android:vmSafeMode="true"
-        android:requestLegacyExternalStorage="true">
+    <application android:icon="@mipmap/ic_launcher" android:label="@string/app_name" android:largeHeap="true" android:name="org.glpi.inventory.agent.ui.InventoryAgentApp" android:requestLegacyExternalStorage="true" android:roundIcon="@drawable/ic_launcher_round" android:theme="@style/AppTheme" android:vmSafeMode="true">
 
-        <uses-library android:name="org.apache.http.legacy" android:required="false" />
+        <uses-library android:name="org.apache.http.legacy" android:required="false"/>
 
-        <meta-data
-            android:name="firebase_crashlytics_collection_enabled"
-            android:value="${crashlyticsEnabled}" />
+        <meta-data android:name="firebase_crashlytics_collection_enabled" android:value="${crashlyticsEnabled}"/>
 
-        <activity
-            android:name="org.glpi.inventory.agent.ui.ActivitySplash"
-            android:theme="@style/NoActionBar">
+        <activity android:exported="true" android:name="org.glpi.inventory.agent.ui.ActivitySplash" android:theme="@style/NoActionBar">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.MAIN"/>
 
-                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
 
-        <activity
-            android:name=".ui.ScanActivity"
-            android:launchMode="singleInstance"
-            android:screenOrientation="landscape"></activity>
+        <activity android:launchMode="singleInstance" android:name=".ui.ScanActivity" android:screenOrientation="landscape"/>
 
-        <activity
-            android:name="org.glpi.inventory.agent.ui.ActivityMain"
-            android:configChanges="orientation|screenSize"
-            android:requestLegacyExternalStorage="true"
-            android:exported="true"
-            android:label="@string/app_name" />
-        <activity
-            android:name="org.glpi.inventory.agent.preference.InventoryParametersPreference"
-            android:label="@string/app_name" />
-        <activity
-            android:name="org.glpi.inventory.agent.preference.GlobalParametersPreference"
-            android:label="@string/app_name" />
-        <activity
-            android:name="org.glpi.inventory.agent.ui.ActivityInventoryReport"
-            android:label="@string/app_name"
-            android:launchMode="standard"
-            android:theme="@style/NoActionBar" />
+        <activity android:configChanges="orientation|screenSize" android:label="@string/app_name" android:name="org.glpi.inventory.agent.ui.ActivityMain" android:requestLegacyExternalStorage="true"/>
+        <activity android:label="@string/app_name" android:name="org.glpi.inventory.agent.preference.InventoryParametersPreference"/>
+        <activity android:label="@string/app_name" android:name="org.glpi.inventory.agent.preference.GlobalParametersPreference"/>
+        <activity android:label="@string/app_name" android:launchMode="standard" android:name="org.glpi.inventory.agent.ui.ActivityInventoryReport" android:theme="@style/NoActionBar"/>
 
-        <service
-            android:name="org.glpi.inventory.agent.service.InventoryService"
-            android:description="@string/agent_description"
-            android:enabled="true"
-            android:icon="@mipmap/ic_launcher"
-            android:label="Inventory Agent"
-            tools:ignore="ExportedService">
+        <service android:description="@string/agent_description" android:enabled="true" android:exported="true" android:icon="@mipmap/ic_launcher" android:label="Inventory Agent" android:name="org.glpi.inventory.agent.service.InventoryService" tools:ignore="ExportedService">
             <intent-filter>
-                <action android:name="org.glpi.inventory.service" />
+                <action android:name="org.glpi.inventory.service"/>
             </intent-filter>
         </service>
 
-        <receiver android:name="org.glpi.inventory.agent.broadcast.BootStartAgent"
-            android:enabled="true"
-            android:exported="true"
-            android:permission="android.permission.RECEIVE_BOOT_COMPLETED">
+        <receiver android:enabled="true" android:exported="true" android:name="org.glpi.inventory.agent.broadcast.BootStartAgent" android:permission="android.permission.RECEIVE_BOOT_COMPLETED">
             <intent-filter>
-                <action android:name="android.intent.action.BOOT_COMPLETED" />
-                <action android:name="android.intent.action.ACTION_BOOT_COMPLETED" />
-                <action android:name="android.intent.action.REBOOT" />
-                <action android:name="android.intent.action.QUICKBOOT_POWERON" />
-                <action android:name="com.htc.intent.action.QUICKBOOT_POWERON" />
-                <action android:name="android.intent.action.ACTION_SHUTDOWN" />
+                <action android:name="android.intent.action.BOOT_COMPLETED"/>
+                <action android:name="android.intent.action.ACTION_BOOT_COMPLETED"/>
+                <action android:name="android.intent.action.REBOOT"/>
+                <action android:name="android.intent.action.QUICKBOOT_POWERON"/>
+                <action android:name="com.htc.intent.action.QUICKBOOT_POWERON"/>
+                <action android:name="android.intent.action.ACTION_SHUTDOWN"/>
             </intent-filter>
         </receiver>
-        <receiver android:name="org.glpi.inventory.agent.broadcast.TimeAlarm">
+        <receiver android:exported="true" android:name="org.glpi.inventory.agent.broadcast.TimeAlarm">
             <intent-filter>
-                <action android:name="org.glpi.inventory.agent.ALARM" />
+                <action android:name="org.glpi.inventory.agent.ALARM"/>
             </intent-filter>
         </receiver>
 
-        <activity android:name="org.glpi.inventory.agent.ui.PermissionActivity" />
-        <activity android:name="org.glpi.inventory.agent.ui.ActivityListServers" />
-        <activity android:name="org.glpi.inventory.agent.ui.ActivityDetailServer">
+        <activity android:name="org.glpi.inventory.agent.ui.PermissionActivity"/>
+        <activity android:name="org.glpi.inventory.agent.ui.ActivityListServers"/>
+        <activity android:exported="true" android:name="org.glpi.inventory.agent.ui.ActivityDetailServer">
             <intent-filter>
-                <action android:name="android.intent.action.VIEW" />
+                <action android:name="android.intent.action.VIEW"/>
 
-                <category android:name="android.intent.category.DEFAULT" />
-                <category android:name="android.intent.category.BROWSABLE" />
+                <category android:name="android.intent.category.DEFAULT"/>
+                <category android:name="android.intent.category.BROWSABLE"/>
 
-                <data
-                    android:host="glpi-project.github.io"
-                    android:pathPrefix="/android-inventory-agent/deeplink"/>
-                <data android:scheme="http" />
-                <data android:scheme="https" />
+                <data android:host="glpi-project.github.io" android:pathPrefix="/android-inventory-agent/deeplink"/>
+                <data android:scheme="http"/>
+                <data android:scheme="https"/>
             </intent-filter>
 
         </activity>
-        <activity android:name="org.glpi.inventory.agent.ui.ActivityCategories" />
+        <activity android:name="org.glpi.inventory.agent.ui.ActivityCategories"/>
     </application>
 
 </manifest>
