--- a/.github/workflows/deploy-alpha.yml
+++ b/.github/workflows/deploy-alpha.yml
@@ -14,6 +14,9 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
+    ################################
+    # Update Version Code          #
+    ################################
     - name: Update Android Version code
       run: ./gradlew updateVersionCode
 
@@ -32,9 +35,16 @@ jobs:
             echo "about.commitFull=$(git rev-parse "$GITHUB_SHA")" >> ./app/src/main/assets/about.properties
             echo "about.github=https://github.com/glpi-project/android-inventory-agent" >> ./app/src/main/assets/about.properties
 
-    - name: Check repo git status
-      run : git status
+    - name: Push Updated Version On AndroidManifest
+      uses: EndBug/add-and-commit@v9
+      with:
+        default_author: github_actions
+        message: "ci(release): update version on android manifest"
 
+
+    ##########################################
+    # Push / Pull translation files          #
+    ##########################################
     # Push Transifex
     - name: Push source file using transifex client
       uses: transifex/cli-action@v2
@@ -53,6 +63,10 @@ jobs:
         args: pull --force --all --minimum-perc=80
         token: ${{ secrets.TX_TOKEN }}
 
+
+    ##############################################
+    # Prepare / Build project APK / AAR / JAR    #
+    ##############################################
     # Build app
     - name: Build with Gradle
       run: ./gradlew assemble
