--- a/.github/workflows/deploy-alpha.yml
+++ b/.github/workflows/deploy-alpha.yml
@@ -92,3 +92,4 @@ jobs:
         packageName: org.glpi.inventory.agent
         releaseFiles: app/build/outputs/apk/release/app-release-unsigned-signed.apk
         track: alpha
+        changesNotSentForReview: true
