--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -12,7 +12,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
       with:
         ref: develop
         fetch-depth: 0 #To Fetch All Tags and Branches
@@ -114,6 +114,13 @@ jobs:
     - name: Build with Gradle
       run: ./gradlew build
 
+    - name: Setup build tool version variable
+      shell: bash
+      run: |
+        BUILD_TOOL_VERSION=$(ls /usr/local/lib/android/sdk/build-tools/ | tail -n 1)
+        echo "BUILD_TOOL_VERSION=$BUILD_TOOL_VERSION" >> $GITHUB_ENV
+        echo Last build tool version is: $BUILD_TOOL_VERSION
+
     - name: Sign app APK
       uses: r0adkll/sign-android-release@v1
       # ID used to access action output
@@ -126,7 +133,7 @@ jobs:
         keyPassword: ${{ secrets.SIGN_APP_KEYPASS }}
       env:
         # override default build-tools version (29.0.3) -- optional
-        BUILD_TOOLS_VERSION: "30.0.2"
+        BUILD_TOOLS_VERSION: ${{ env.BUILD_TOOL_VERSION }}
 
     - name: Push to google play
       uses: r0adkll/upload-google-play@v1
