--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,9 +56,7 @@ dependencies {
     androidTestImplementation('androidx.test.espresso:espresso-core:3.1.0', {
         exclude group: 'com.androidx', module: 'support-annotations'
     })
-    androidTestImplementation('tools.fastlane:screengrab:1.1.0', {
-        exclude group: 'com.androidx', module: 'support-annotations'
-    })
+    androidTestImplementation 'tools.fastlane:screengrab:2.1.1'
 
     testImplementation 'org.mockito:mockito-core:2.18.3'
     androidTestImplementation 'org.mockito:mockito-android:2.18.3'
