--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -65,7 +65,7 @@ jobs:
       uses: EndBug/add-and-commit@v9.0.0
       with:
         default_author: github_actions
-        add: "['CHANGELOG.md', 'package.json']" #only this files will be added
+        add: "CHANGELOG.md"
         push: origin HEAD:develop
         message: "ci(release): release new version ${{ env.tag_name }}"
 
