--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:tools="http://schemas.android.com/tools"
-android:versionCode="39403"
-android:versionName="">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:versionCode="39413"
+    android:versionName="">
 
     <!-- Permissions -->
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.ACCESS_MOCK_LOCATION"/>
@@ -30,9 +31,6 @@ android:versionName="">
     <!-- Allows changing locales -->
     <uses-permission android:name="android.permission.CHANGE_CONFIGURATION"/>
 
-    <!-- Apps wanting to use foreground services, API 28 higher -->
-    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
-
     <application android:icon="@mipmap/ic_launcher" android:label="@string/app_name" android:largeHeap="true" android:name="org.glpi.inventory.agent.ui.InventoryAgentApp" android:requestLegacyExternalStorage="true" android:roundIcon="@drawable/ic_launcher_round" android:theme="@style/AppTheme" android:vmSafeMode="true">
 
         <uses-library android:name="org.apache.http.legacy" android:required="false"/>
@@ -56,12 +54,6 @@ android:versionName="">
         <activity android:label="@string/app_name" android:name="org.glpi.inventory.agent.preference.GlobalParametersPreference"/>
         <activity android:label="@string/app_name" android:launchMode="standard" android:name="org.glpi.inventory.agent.ui.ActivityInventoryReport" android:theme="@style/NoActionBar"/>
 
-        <service android:description="@string/agent_description" android:enabled="true" android:exported="true" android:icon="@mipmap/ic_launcher" android:label="Inventory Agent" android:name="org.glpi.inventory.agent.service.InventoryService" tools:ignore="ExportedService">
-            <intent-filter>
-                <action android:name="org.glpi.inventory.service"/>
-            </intent-filter>
-        </service>
-
         <receiver android:enabled="true" android:exported="true" android:name="org.glpi.inventory.agent.broadcast.BootStartAgent" android:permission="android.permission.RECEIVE_BOOT_COMPLETED">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED"/>
@@ -72,21 +64,19 @@ android:versionName="">
                 <action android:name="android.intent.action.ACTION_SHUTDOWN"/>
             </intent-filter>
         </receiver>
-        <receiver android:exported="true" android:name="org.glpi.inventory.agent.broadcast.TimeAlarm">
-            <intent-filter>
-                <action android:name="org.glpi.inventory.agent.ALARM"/>
-            </intent-filter>
-        </receiver>
+
+        <service android:name=".broadcast.InventoryJobScheduler"
+            android:enabled="true"
+            android:exported="false"
+            android:permission="android.permission.BIND_JOB_SERVICE"/>
 
         <activity android:name="org.glpi.inventory.agent.ui.PermissionActivity"/>
         <activity android:name="org.glpi.inventory.agent.ui.ActivityListServers"/>
         <activity android:exported="true" android:name="org.glpi.inventory.agent.ui.ActivityDetailServer">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW"/>
-
                 <category android:name="android.intent.category.DEFAULT"/>
                 <category android:name="android.intent.category.BROWSABLE"/>
-
                 <data android:host="glpi-project.github.io" android:pathPrefix="/android-inventory-agent/deeplink"/>
                 <data android:scheme="http"/>
                 <data android:scheme="https"/>
